Fix page generate date, a few styles, broken css link in base template

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,12 +8,12 @@
 
 ::-moz-selection {
   background-color: $accent-color;
-  color: $page-color;
+  color: mix($text-color, $page-color, 80%);
 }
 
 ::selection {
   background-color: $accent-color;
-  color: $page-color;
+  color: mix($text-color, $page-color, 80%);
 }
 
 html {
